EEVEE-Next: Area Lights Clip Light Spread Relative to Light Position #119334

Closed
opened 2024-03-11 18:02:01 +01:00 by Timothy Cook · 1 comment

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-10 18:36, hash: 703353b5dafc
Worked: N/A

Short description of error
If I have an above Area light, not touching or intersecting with the ceiling, I get a line artifact along the wall. It’s very noticeable with a light line with the light’s shadows set to soft, and has a solid cut off line when set to hard shadows.
Funny thing is, if I lower the light by half a meter the line then raises to meet the edge of the light. It’s almost as if invisible barn doors are pinned in space half a meter below the light at 45 deg. and lowering the light opens the barn doors to full.
Thanks!

Exact steps for others to reproduce the error
Open provided Blend file
Enable Eevee Next
Move light position on the Z axis relative to the ceiling to see the shadows line move in the opposite direction of light movement. Also noticeable but less pronounce with the light's shadows set to soft.

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.61 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-10 18:36, hash: `703353b5dafc` Worked: N/A **Short description of error** If I have an above Area light, not touching or intersecting with the ceiling, I get a line artifact along the wall. It’s very noticeable with a light line with the light’s shadows set to soft, and has a solid cut off line when set to hard shadows. Funny thing is, if I lower the light by half a meter the line then raises to meet the edge of the light. It’s almost as if invisible barn doors are pinned in space half a meter below the light at 45 deg. and lowering the light opens the barn doors to full. Thanks! **Exact steps for others to reproduce the error** Open provided Blend file Enable Eevee Next Move light position on the Z axis relative to the ceiling to see the shadows line move in the opposite direction of light movement. Also noticeable but less pronounce with the light's shadows set to soft.
Timothy Cook added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-11 18:02:02 +01:00
Iliya Katushenock added the
Interest
EEVEE & Viewport
label 2024-03-11 18:13:04 +01:00
Philipp Oeser changed title from Area Lights Clip Light Spread Relative to Light Position to EEVEE-Next: Area Lights Clip Light Spread Relative to Light Position 2024-04-12 16:23:03 +02:00
Member

As discussed in chat, raising obvious regressions from EEVEE >> EEVEE-Next to high priority

As discussed in chat, raising obvious regressions from `EEVEE` >> `EEVEE-Next` to high priority
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2024-04-12 16:38:21 +02:00
Clément Foucault self-assigned this 2024-04-23 13:40:52 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-24 17:08:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119334
No description provided.