source/blender/draw/engines/eevee_next/eevee_defines.hh
@@ -245,7 +245,7 @@
 /* Only during shadow rendering. */
 #define SHADOW_RENDER_MAP_BUF_SLOT 3
 #define SHADOW_PAGE_INFO_SLOT 4
-#define SHADOW_VIEWPORT_INDEX_BUF_SLOT 5
+#define SHADOW_RENDER_VIEW_BUF_SLOT 5
 
 /* Only during pre-pass. */
 #define VELOCITY_OBJ_PREV_BUF_SLOT 0
